--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,5 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Helvetica, sans-serif;
+  overflow-x: hidden;
 }
